# uniffi-rs

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
docs/: contributing.md
examples/: README.md
examples/arithmetic/tests/: test_generated_bindings.rs
examples/callbacks/tests/: test_generated_bindings.rs
examples/custom-types/tests/: test_generated_bindings.rs
examples/geometry/tests/: test_generated_bindings.rs
examples/rondpoint/tests/: test_generated_bindings.rs
examples/sprites/tests/: test_generated_bindings.rs
examples/todolist/tests/: test_generated_bindings.rs
fixtures/byref-trait/: Cargo.toml  uniffi.toml
fixtures/byref-trait/src/: lib.rs
fixtures/byref-trait/tests/bindings/: test.kts  test.py  test.swift
fixtures/callbacks/tests/: test_generated_bindings.rs
fixtures/coverall/tests/: test_generated_bindings.rs
fixtures/foreign-executor/tests/: test_generated_bindings.rs
fixtures/futures/tests/: test_generated_bindings.rs
fixtures/proc-macro/tests/: test_generated_bindings.rs
fixtures/simple-fns/tests/: test_generated_bindings.rs
fixtures/simple-iface/tests/: test_generated_bindings.rs
fixtures/swift-omit-labels/tests/: test_generated_bindings.rs
fixtures/type-limits/tests/: test_generated_bindings.rs
fixtures/uniffi-fixture-time/tests/: test_generated_bindings.rs
uniffi_bindgen/src/: lib.rs  library_mode.rs
uniffi_bindgen/src/interface/: mod.rs  object.rs
uniffi_core/src/: ffi_converter_traits.rs
uniffi_docs/: Cargo.toml
uniffi_docs/src/: lib.rs
uniffi_macros/: Cargo.toml
uniffi_macros/src/: util.rs
(+19 files in other folders)
