[package]
name = "uniffi-fixture-byref-trait"
version = "0.25.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_byref_trait"

[dependencies]
uniffi = {path = "../../uniffi", version = "0.25" }
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi = {path = "../../uniffi", version = "0.25", features = ["build"] }

[dev-dependencies]
uniffi = {path = "../../uniffi", version = "0.25", features = ["bindgen-tests"] }

